fix getting there spacing

--- a/public/sass/styles.scss
+++ b/public/sass/styles.scss
@@ -980,3 +980,7 @@ FAQ
 .list-spacing {
   padding-bottom: 1rem;
 }
+
+.getting-there {
+  //keep here because of queries. 
+}
